--- a/source/form.html
+++ b/source/form.html
@@ -32,81 +32,89 @@
       <h1 class="visually-hidden">Форма подбора программы питания для кота</h1>
 
       <form class="form" action="https://echo.htmlacademy.ru" method="POST">
-        <h2 class="form__title">Подбор программы</h2>
-        <p class="form__tagline">Заполните анкету и мы подберем программу питания для вашего кота</p>
-        <div class="form__program-wrapper">
+        <div class="form__wrapper">
+          <h2 class="form__title">Подбор программы</h2>
+          <p class="form__tagline">Заполните анкету и мы подберем программу питания для вашего кота</p>
+          <div class="form__program-wrapper">
+            <div class="form__program-wrapper-item form__program-wrapper-item--flex form__program-wrapper-item--basic">
+              <fieldset class="form__block form__block--basic">
+                <p class="form__item input-text">
+                  <label class="input-text__label" for="form-name">Имя:*</label>
+                  <input class="input-text__input" type="text" id="form-name" name="name" placeholder="Барсик">
+                </p>
+                <p class="form__item input-text">
+                  <label class="input-text__label" for="form-weight">Вес (кг):*</label>
+                  <input class="input-text__input" type="text" id="form-weight" name="weight" placeholder="7">
+                </p>
+                <p class="form__item input-text">
+                  <label class="input-text__label" for="form-age">Возраст (лет):</label>
+                  <input class="input-text__input" type="text" id="form-age" name="age" placeholder="7">
+                </p>
+              </fieldset>
+            </div>
+            <div class="form__program-wrapper-item form__program-wrapper-item--flex form__program-wrapper-item--type">
+              <fieldset class="form__block form__block--type">
+                <p class="form__item input-radio">
+                  <input class="input-radio__input" type="radio" id="form-losing-weight" name="program" value="losing weight" checked>
+                  <label class="input-radio__label" for="form-losing-weight">Похудение</label>
+                </p>
+                <p class="form__item input-radio">
+                  <input class="input-radio__input" type="radio" id="form-mass-gathering" name="program" value="mass-gathering">
+                  <label class="input-radio__label" for="form-mass-gathering">Набор массы</label></p>
+                <p class="form__item input-radio">
+                  <input class="input-radio__input" type="radio" id="form-need-advice" name="program" value="need-advice">
+                  <label class="input-radio__label" for="form-need-advice">Не знаю (Нужен ваш совет)</label></p>
+              </fieldset>
+            </div>
+          </div>
           <div class="form__program-wrapper-item">
-            <fieldset class="form__block form__block--basic">
-              <p class="form__item input-text">
-                <label class="input-text__label" for="form-name">Имя:*</label>
-                <input class="input-text__input" type="text" id="form-name" name="name" placeholder="Барсик">
-              </p>
-              <p class="form__item input-text">
-                <label class="input-text__label" for="form-weight">Вес (кг):*</label>
-                <input class="input-text__input" type="text" id="form-weight" name="weight" placeholder="7">
-              </p>
-              <p class="form__item input-text">
-                <label class="input-text__label" for="form-age">Возраст (лет):</label>
-                <input class="input-text__input" type="text" id="form-age" name="age" placeholder="7">
-              </p>
+            <fieldset class="form__block form__block--contacts">
+              <legend class="form__block-title form__block-title--contacts">Контактные данные (владельца кота)</legend>
+              <div class="form__contacts-wrapper">
+                <p class="form__item input-text input-text--contact">
+                  <label class="input-text__label" for="form-email">E-mail:*</label>
+                  <input class="input-text__input" type="email" id="form-email" name="email" placeholder="kuklachev@gmail.com">
+                </p>
+                <p class="form__item input-text input-text--contact">
+                  <label class="input-text__label" for="form-tel">Телефон:*</label>
+                  <input class="input-text__input" type="tel" id="form-tel" name="telephone" placeholder="8 (960) 900-60-90">
+                </p>
+              </div>
             </fieldset>
           </div>
           <div class="form__program-wrapper-item">
-            <fieldset class="form__block form__block--program-type">
-              <p class="form__item input-radio">
-                <input class="input-radio__input" type="radio" id="form-losing-weight" name="program" value="losing weight" checked>
-                <label class="input-radio__label" for="form-losing-weight">Похудение</label>
-              </p>
-              <p class="form__item input-radio">
-                <input class="input-radio__input" type="radio" id="form-mass-gathering" name="program" value="mass-gathering">
-                <label class="input-radio__label" for="form-mass-gathering">Набор массы</label></p>
-              <p class="form__item input-radio">
-                <input class="input-radio__input" type="radio" id="form-need-advice" name="program" value="need-advice">
-                <label class="input-radio__label" for="form-need-advice">Не знаю (Нужен ваш совет)</label></p>
+            <fieldset class="form__block form__block--comment">
+              <legend class="form__block-title form__block-title--comment">Комментарий</legend>
+              <textarea class="form__textarea" name="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
             </fieldset>
           </div>
-        </div>
-        <fieldset class="form__block form__block--contacts">
-          <legend class="form__block-title">Контактные данные (владельца кота)</legend>
-          <div class="form__contacts-wrapper">
-            <p class="form__item input-text">
-              <label class="input-text__label" for="form-email">E-mail:*</label>
-              <input class="input-text__input" type="email" id="form-email" name="email" placeholder="kuklachev@gmail.com">
-            </p>
-            <p class="form__item input-text">
-              <label class="input-text__label" for="form-tel">Телефон:*</label>
-              <input class="input-text__input" type="tel" id="form-tel" name="telephone" placeholder="8 (960) 900-60-90">
-            </p>
+          <div class="form__program-wrapper-item">
+            <fieldset class="form__block form__block--additionally">
+              <legend class="form__block-title form__block-title--additionally">Дополнительно</legend>
+              <div class="form__additional-wrapper">
+                <p class="form__item input-checkbox">
+                  <input class="input-checkbox__input" type="checkbox" id="form-sweetener" name="sweetener" checked>
+                  <label class="input-checkbox__label" for="form-sweetener">Сахарозаменитель</label>
+                </p>
+                <p class="form__item input-checkbox">
+                  <input class="input-checkbox__input" type="checkbox" id="form-water" name="water">
+                  <label class="input-checkbox__label" for="form-water">Питьевая вода</label>
+                </p>
+                <p class="form__item input-checkbox">
+                  <input class="input-checkbox__input" type="checkbox" id="form-milk" name="milk">
+                  <label class="input-checkbox__label" for="form-milk">Молоко</label>
+                </p>
+                <p class="form__item input-checkbox">
+                  <input class="input-checkbox__input" type="checkbox" id="form-vitamins" name="vitamins">
+                  <label class="input-checkbox__label" for="form-vitamins">Витамины</label>
+                </p>
+              </div>
+            </fieldset>
           </div>
-        </fieldset>
-        <fieldset class="form__block form__block--comment">
-          <legend class="form__block-title">Комментарий</legend>
-          <textarea class="form__textarea" name="comment" cols="30" rows="10" placeholder="Расскажите обо всех повадках кота"></textarea>
-        </fieldset>
-        <fieldset class="form__block form__block--additionally">
-          <legend class="form__block-title">Дополнительно</legend>
-          <div class="form__additional-wrapper">
-            <p class="form__item input-checkbox">
-              <input class="input-checkbox__input" type="checkbox" id="form-sweetener" name="sweetener" checked>
-              <label class="input-checkbox__label" for="form-sweetener">Сахарозаменитель</label>
-            </p>
-            <p class="form__item input-checkbox">
-              <input class="input-checkbox__input" type="checkbox" id="form-water" name="water">
-              <label class="input-checkbox__label" for="form-water">Питьевая вода</label>
-            </p>
-            <p class="form__item input-checkbox">
-              <input class="input-checkbox__input" type="checkbox" id="form-milk" name="milk">
-              <label class="input-checkbox__label" for="form-milk">Молоко</label>
-            </p>
-            <p class="form__item input-checkbox">
-              <input class="input-checkbox__input" type="checkbox" id="form-vitamins" name="vitamins">
-              <label class="input-checkbox__label" for="form-vitamins">Витамины</label>
-            </p>
+          <div class="form__program-wrapper-item form__program-wrapper-item--submit">
+            <button class="form-submit button" type="submit">Отправить заявку</button>
+            <p class="form__required">* — Обязательные поля</p>
           </div>
-        </fieldset>
-        <div class="form__submit-wrapper">
-          <button class="form-submit button" type="submit">Отправить заявку</button>
-          <p class="form__required">* — Обязательные поля</p>
         </div>
       </form>
 
