--- a/source/index.html
+++ b/source/index.html
@@ -10,10 +10,10 @@
 
     <header class="page-header">
       <a class="page-header__logo logo-header">
-        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="200" height="38" alt="Логотип компании Cat Energy">
-        <button class="page-header__nav-toggle" type="button"><span class=" visually-hidden">Открыть меню</span></button>
+        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="200" alt="Логотип компании Cat Energy">
       </a>
       <nav class="page-header__nav main-nav">
+        <button class="page-header__nav-toggle" type="button"><span class=" visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list">
           <li class="main-nav__item">
             <a class="main-nav__link main-nav__link--active">Главная</a>
@@ -36,7 +36,7 @@
             <h2 class="programs__title">Функциональное питание для котов</h2>
             <p class="programs__slogan">Занялся собой? Займись котом!</p>
             <img class="programs__picture" src="img/index-can-mobile@1x.png" width="280" height="271" alt="Корм Cat Energy">
-            <a class="programs__form-link button" href="form.html">Подобрать программу</a>
+            <a class="programs__form-link button button--program" href="form.html">Подобрать программу</a>
           </div>
         </header>
         <section class="programs__list program-types">
