--- a/source/index.html
+++ b/source/index.html
@@ -49,7 +49,7 @@
             </li>
             <li class="program-types__item program-types__item--mass">
               <h3 class="program-types__title">Набор массы</h3>
-              <p class="program-types__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+              <p class="program-types__text program-types__text--mass">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
               <a class="program-types__link" href="catalog-pro.html">Каталог Pro</a>
             </li>
           </ul>
@@ -69,7 +69,7 @@
             <p class="features__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
           </li>
           <li class="features__item features__item--month">
-            <p class="features__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+            <p class="features__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего&nbsp;питомца!</p>
           </li>
         </ul>
       </section>
@@ -78,7 +78,7 @@
         <div class="example__wrapper">
           <div class="example__wrapper-big example__wrapper-big--description">
             <h2 class="example__title">Живой пример</h2>
-            <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+            <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по&#8209;прежнему спит по 16 часов в день.</p>
             <div class="example__wrapper-small">
               <ul class="example__list">
                 <li class="example__item example__weight">
