--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,16 +10,18 @@
 
     <header class="page-header">
       <a class="page-header__logo logo-header" href="index.html">
-        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="200" height="38" alt="Логотип компании Cat Energy">
-        <button class="page-header__nav-toggle" type="button"><span class=" visually-hidden">Открыть меню</span></button>
+        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="200" alt="Логотип компании Cat Energy">
       </a>
       <nav class="page-header__nav main-nav">
+        <button class="page-header__nav-toggle" type="button">
+          <span class=" visually-hidden">Открыть меню</span>
+        </button>
         <ul class="main-nav__list">
           <li class="main-nav__item">
             <a class="main-nav__link" href="index.html">Главная</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link--active">Каталог продукции</a>
+            <a class="main-nav__link  main-nav__link--active">Каталог продукции</a>
           </li>
           <li class="main-nav__item">
             <a class="main-nav__link" href="form.html">Подбор программы</a>
@@ -36,7 +38,7 @@
           <li class="catalog__item item">
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
-                <a href="#item">
+                <a class="item__picture-link" href="#item">
                   <img class="item__picture" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
                 </a>
                 <div class="item__wrapper-caption">
@@ -65,7 +67,7 @@
           <li class="catalog__item item">
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
-                <a href="#item">
+                <a class="item__picture-link" href="#item">
                   <img class="item__picture" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
                 </a>
                 <div class="item__wrapper-caption">
@@ -94,7 +96,7 @@
           <li class="catalog__item item">
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
-                <a href="#item">
+                <a class="item__picture-link" href="#item">
                   <img class="item__picture" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
                 </a>
                 <div class="item__wrapper-caption">
@@ -123,7 +125,7 @@
           <li class="catalog__item item">
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
-                <a href="#item">
+                <a class="item__picture-link" href="#item">
                   <img class="item__picture" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
                 </a>
                 <div class="item__wrapper-caption">
@@ -152,12 +154,12 @@
           <li class="catalog__item item">
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
-                <a href="#item">
+                <a class="item__picture-link" href="#item">
                   <img class="item__picture" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
-                    <h3 class="item__caption">Cat Energy PRO 500 г</h3>
+                    <h3 class="item__caption">Cat Energy Slim 500 г</h3>
                   </a>
                   <table class="item__table table">
                     <tr>
@@ -181,12 +183,12 @@
           <li class="catalog__item item">
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
-                <a href="#item">
+                <a class="item__picture-link" href="#item">
                   <img class="item__picture" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
-                    <h3 class="item__caption">Cat Energy PRO 1000 г</h3>
+                    <h3 class="item__caption">Cat Energy Slim 1000 г</h3>
                   </a>
                   <table class="item__table table">
                     <tr>
@@ -208,10 +210,52 @@
             </div>
           </li>
           <li class="catalog__item item">
+            <div class="item__wrapper">
+              <div class="item__wrapper-inner">
+                <a class="item__picture-link" href="#item">
+                  <img class="item__picture" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
+                </a>
+                <div class="item__wrapper-caption">
+                  <a href="#item">
+                    <h3 class="item__caption">Cat Energy Slim 500 г</h3>
+                  </a>
+                  <table class="item__table table">
+                    <tr>
+                      <td class="table__parameter">Объем</td>
+                      <td class="table__value">500 г</td>
+                    </tr>
+                    <tr>
+                      <td class="table__parameter">Вкус</td>
+                      <td class="table__value">Рис</td>
+                    </tr>
+                    <tr>
+                      <td class="table__parameter">Цена</td>
+                      <td class="table__value">500 Р.</td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
+              <a class="item__order button" href="#item-basket">Заказать</a>
+            </div>
+          </li>
+          <li class="catalog__item item item--more">
+            <div class="item__wrapper">
+              <!-- <div class="item__wrapper-inner item__wrapper-inner--more"> -->
+                <div class="item__wrapper-caption item__wrapper-caption--more">
+                  <a href="#item">
+                    <h3 class="item__caption item__caption--more">Показать еще 100500 товаров</h3>
+                  </a>
+                  <p class="item_description">На самом деле вкусов гораздо больше!</p>
+                </div>
+              <!-- </div> -->
+              <a class="item__order button button--all" href="#item-basket">Показать все</a>
+            </div>
+          </li>
+          <!-- <li class="catalog__item item">
             <h3 class="item__caption">Показать еще 100500 товаров</h3>
             <p class="item_description">На самом деле вкусов гораздо больше!</p>
             <a class="item__order button button--all" href="">Показать все</a>
-          </li>
+          </li> -->
         </ul>
       </section>
 
@@ -261,7 +305,7 @@
             </li>
           </ul>
           <div class="additional__offer">
-            <p class="additional__offer-title">Закажите все и получите чехол для кота в подарок!</p>
+            <p class="additional__offer-title">Закажите все и&nbsp;получите чехол для кота в подарок!</p>
           </div>
         </div>
       </section>
@@ -269,13 +313,16 @@
 
     <footer class="page-footer">
       <h2 class="visually-hidden">Контакты</h2>
-      <div class="page-footer__contacts contacts">
-        <p class="contacts__text">Приглашаем к сотрудничеству дилеров!</p>
-        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      <div class="page-footer__contacts contacts contacts--white">
+        <p class="contacts__text">Приглашаем к&nbsp;сотрудничеству дилеров!</p>
+        <p class="contacts__address">
+          <span class="contacts__address-street">ул. Большая Конюшенная, д. 19/8</span>
+          <span class="contacts__address-city">Санкт-Петербург</span>
+        </p>
       </div>
 
       <div class="page-footer__map">
-        <img src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Местонахождение магазина на карте">
+        <!-- <img src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Местонахождение магазина на карте"> -->
       </div>
 
       <div class="page-footer__wrapper">
@@ -285,22 +332,28 @@
 
         <div class="page-footer__social social">
           <ul class="social__list">
-            <li class="social__item">
-              <a class="social__link social__link--vkontakte" href="#vkontakte"><span class="visually-hidden">Мы в Вконтакте</span></a>
+            <li class="social__item social__item--vkontakte">
+              <a class="social__link social__link--vkontakte" href="#vkontakte">
+                <span class="visually-hidden">Мы в Вконтакте</span>
+              </a>
             </li>
-            <li class="social__item">
-              <a class="social__link social__link--instagram" href="#instagram"><span class="visually-hidden">Мы в инстаграме</span></a>
+            <li class="social__item social__item--instagram">
+              <a class="social__link social__link--instagram" href="#instagram">
+                <span class="visually-hidden">Мы в инстаграме</span>
+              </a>
             </li>
-            <li class="social__item">
-              <a class="social__link social__link--facebook" href="#facebook"><span class="visually-hidden">Мы в Фейсбуке</span></a>
+            <li class="social__item social__item--facebook">
+              <a class="social__link social__link--facebook" href="#facebook">
+                <span class="visually-hidden">Мы в Фейсбуке</span>
+              </a>
             </li>
           </ul>
         </div>
 
         <div class="page-footer__copyright copyright">
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <img src="img/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy">
+          <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
+            <img src="img/htmlacademy.svg" width="40" height="40" alt="Логотип HTML Academy">
           </a>
         </div>
       </div>
