--- a/source/index.html
+++ b/source/index.html
@@ -50,14 +50,14 @@
           <div class="programs__header-wrapper">
             <h2 class="programs__title">Функциональное питание для котов</h2>
             <p class="programs__slogan">Занялся собой? Займись котом!</p>
-            <picture class="programs__picture">
+            <picture>
               <source type="image/webp" media="(min-width: 1300px)" srcset="img/index-can-desktop@1x.webp 1x, img/index-can-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 768px)" srcset="img/index-can-tablet@1x.webp 1x,img/index-can-tablet@2x.webp 2x">
               <source type="image/webp" srcset="img/index-can-mobile@1x.webp 1x, img/index-can-mobile@2x.webp 2x">
 
               <source media="(min-width: 1300px)" srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
               <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg 1x,img/index-can-tablet@2x.jpg 2x">
-              <img src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" alt="Корм Cat Energy">
+              <img class="programs__picture" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" alt="Корм Cat Energy">
             </picture>
             <a class="programs__form-link button button--program" href="form.html">Подобрать программу</a>
           </div>
@@ -121,14 +121,14 @@
               </div>
             </div>
             <div class="example__wrapper-big example__wrapper-big--slider">
-              <picture class="example__before">
+              <picture>
                 <source type="image/webp" media="(min-width: 1300px)" srcset="img/before-desktop@1x.webp 1x, img/before-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/before-tablet@1x.webp 1x, img/before-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="img/before-mobile@1x.webp 1x, img/before-mobile@2x.webp 2x">
 
                 <source media="(min-width: 1300px)" srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png 1x, img/before-tablet@2x.png 2x">
-                <img src="img/before-mobile@1x.png" srcset="img/before-mobile@2x.png 2x" alt="Кот до похудения">
+                <img class="example__before" src="img/before-mobile@1x.png" srcset="img/before-mobile@2x.png 2x" alt="Кот до похудения">
               </picture>
               <div class="example__range-control">
                 <button class="example__toggle" type="button">Было</button>
